# Ayjx

./: .gitignore  Cargo.toml
src/: adapter_console.rs  adapter_napcat.rs  adapters.rs  api.rs  bot.rs  browser.rs  command.rs  config.rs  db.rs  event.rs  lib.rs  log.rs  main.rs  matcher.rs  message.rs  plugin_blacklist.rs  plugin_echo.rs  plugin_group_self_title.rs  plugin_logger.rs  plugin_recall.rs  plugin_repeater.rs  plugin_survey.rs  plugins.rs  scheduler.rs
src/adapter_napcat/: api.rs
src/adapters/: console.rs  onebot.rs
src/adapters/onebot/: api.rs
src/browser/: element.rs  process.rs  tab.rs  transport.rs  types.rs
src/db/: queries.rs  utils.rs
src/plugins/: card_reader.rs  ciyi.rs  echo.rs  filter_meta_event.rs  gif_lab.rs  group_self_title.rs  image_splitter.rs  logger.rs  media_transfer.rs  oai.rs  ping_pong.rs  recall.rs  recorder.rs  registry.rs  repeater.rs  shindan.rs  stats_visualizer.rs  sticker_saver.rs  web_shot.rs  word_cloud.rs
src/plugins/card_reader/: parser.rs
src/plugins/ciyi/: config.rs  data.rs  engine.rs  entity.rs
src/plugins/gif_lab/: gif_ops.rs  utils.rs
src/plugins/image_splitter/: processing.rs
src/plugins/oai/: data.rs  logic.rs  parser.rs  types.rs  utils.rs
src/plugins/shindan/: config.rs  entity.rs  executor.rs  manager.rs  stats.rs  storage.rs  utils.rs
src/plugins/stats_visualizer/: chart.rs
src/plugins/stats_visualizer/chart/: avatar.rs  data_loader.rs  renderer.rs  utils.rs
src/plugins/word_cloud/: config.rs  image.rs  stopwords.rs
